@@ -1,3 +1,4 @@
+- code: use constants for alert mode
 v 0.1.6
 - fix bugs in logic deciding when aliens attack
 - fix bugs with Sengzhac log not showing and not being able to scroll over it
